# serializer version: 1
# name: test_diagnostics_config_entry
  dict({
    'discovered': dict({
      'RINCON_test': dict({
        '_group_members_missing': list([
        ]),
        '_last_activity': -1200.0,
        '_last_event_cache': dict({
        }),
        'activity_stats': dict({
        }),
        'available': True,
        'battery_info': dict({
          'Health': 'GREEN',
          'Level': 100,
          'PowerSource': 'SONOS_CHARGING_RING',
          'Temperature': 'NORMAL',
        }),
        'enabled_entities': list([
          'binary_sensor.zone_a_charging',
          'binary_sensor.zone_a_microphone',
          'media_player.zone_a',
          'number.zone_a_audio_delay',
          'number.zone_a_balance',
          'number.zone_a_bass',
          'number.zone_a_music_surround_level',
          'number.zone_a_sub_gain',
          'number.zone_a_surround_level',
          'number.zone_a_treble',
          'sensor.zone_a_audio_input_format',
          'sensor.zone_a_battery',
          'switch.sonos_alarm_14',
          'switch.zone_a_crossfade',
          'switch.zone_a_loudness',
          'switch.zone_a_night_sound',
          'switch.zone_a_speech_enhancement',
          'switch.zone_a_subwoofer_enabled',
          'switch.zone_a_surround_enabled',
          'switch.zone_a_surround_music_full_volume',
        ]),
        'event_stats': dict({
          'soco:parse_event_xml': list([
            0,
            0,
            128,
            0,
          ]),
        }),
        'hardware_version': '1.20.1.6-1.1',
        'household_id': 'test_household_id',
        'is_coordinator': True,
        'media': dict({
          'album_name': None,
          'artist': None,
          'channel': None,
          'current_track_poll': dict({
            'album': '',
            'album_art': '',
            'artist': '',
            'duration': 'NOT_IMPLEMENTED',
            'duration_in_s': None,
            'metadata': 'NOT_IMPLEMENTED',
            'playlist_position': '1',
            'position': 'NOT_IMPLEMENTED',
            'position_in_s': None,
            'title': '',
            'uri': '',
          }),
          'duration': None,
          'image_url': None,
          'playlist_name': None,
          'queue_position': None,
          'source_name': None,
          'title': None,
          'uri': None,
        }),
        'model_name': 'Model Name',
        'model_number': 'S12',
        'software_version': '49.2-64250',
        'subscription_address': '192.168.42.2:8080',
        'subscriptions_failed': False,
        'version': '13.1',
        'zone_group_state_stats': dict({
          'processed': 10,
          'total_requests': 12,
        }),
        'zone_name': 'Zone A',
      }),
    }),
    'discovery_known': list([
      'RINCON_test',
    ]),
  })
# ---
# name: test_diagnostics_device
  dict({
    '_group_members_missing': list([
    ]),
    '_last_activity': -1200.0,
    '_last_event_cache': dict({
    }),
    'activity_stats': dict({
    }),
    'available': True,
    'battery_info': dict({
      'Health': 'GREEN',
      'Level': 100,
      'PowerSource': 'SONOS_CHARGING_RING',
      'Temperature': 'NORMAL',
    }),
    'enabled_entities': list([
      'binary_sensor.zone_a_charging',
      'binary_sensor.zone_a_microphone',
      'media_player.zone_a',
      'number.zone_a_audio_delay',
      'number.zone_a_balance',
      'number.zone_a_bass',
      'number.zone_a_music_surround_level',
      'number.zone_a_sub_gain',
      'number.zone_a_surround_level',
      'number.zone_a_treble',
      'sensor.zone_a_audio_input_format',
      'sensor.zone_a_battery',
      'switch.sonos_alarm_14',
      'switch.zone_a_crossfade',
      'switch.zone_a_loudness',
      'switch.zone_a_night_sound',
      'switch.zone_a_speech_enhancement',
      'switch.zone_a_subwoofer_enabled',
      'switch.zone_a_surround_enabled',
      'switch.zone_a_surround_music_full_volume',
    ]),
    'event_stats': dict({
      'soco:parse_event_xml': list([
        0,
        0,
        128,
        0,
      ]),
    }),
    'hardware_version': '1.20.1.6-1.1',
    'household_id': 'test_household_id',
    'is_coordinator': True,
    'media': dict({
      'album_name': None,
      'artist': None,
      'channel': None,
      'current_track_poll': dict({
        'album': '',
        'album_art': '',
        'artist': '',
        'duration': 'NOT_IMPLEMENTED',
        'duration_in_s': None,
        'metadata': 'NOT_IMPLEMENTED',
        'playlist_position': '1',
        'position': 'NOT_IMPLEMENTED',
        'position_in_s': None,
        'title': '',
        'uri': '',
      }),
      'duration': None,
      'image_url': None,
      'playlist_name': None,
      'queue_position': None,
      'source_name': None,
      'title': None,
      'uri': None,
    }),
    'model_name': 'Model Name',
    'model_number': 'S12',
    'software_version': '49.2-64250',
    'subscription_address': '192.168.42.2:8080',
    'subscriptions_failed': False,
    'version': '13.1',
    'zone_group_state_stats': dict({
      'processed': 10,
      'total_requests': 12,
    }),
    'zone_name': 'Zone A',
  })
# ---
